--- a/web/index.html
+++ b/web/index.html
@@ -23,10 +23,10 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="pokemon_ev_calculator">
+  <meta name="apple-mobile-web-app-title" content="IV, EV and Stats Calculator">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>pokemon_ev_calculator</title>
+  <title>IV, EV and Stats Calculator</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
